# bin2cpp

./: .gitignore  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  README.md  TODO.txt  appveyor.yml  run_cmake.bat  temp.txt  version_info.bat  version_info.h  version_info.nsh
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
ci/appveyor/: build_library.bat  build_version_split.ps1  emulate_appveyor.bat  googletest_build.bat  googletest_install.bat  install.bat  install_googletest.bat  install_rapidassist.bat  list_env_var.bat  override_build_version.ps1  prepare_github_deploy.ps1  test_script.bat  version_info_update.bat
ci/github/: install_googletest.sh
ci/linux/: build_all_debug.sh  build_all_release.sh  build_client.sh  build_library.sh  install_bin2cpp.sh  install_googletest.sh  install_rapidassist.sh  test_script.sh
ci/travis/: build_library.sh  emulate_travis.sh  install_googletest.sh  install_rapidassist.sh  test_script.sh
ci/windows/: build_all_debug.bat  build_all_release.bat  build_library.bat  install_bin2cpp.bat  install_googletest.bat  install_rapidassist.bat  test_script.bat
ci/windowslocal/: googletest_install.bat
cmake/: GetLinuxReleaseInfo.cmake  GetMacReleaseInfo.cmake  GetOsNameAndVersion.cmake  GetOsReleaseInfo.cmake  GetWindowsReleaseInfo.cmake  bin2cpp-config-version.cmake.in  bin2cpp-config.cmake.in
docs/: Doxyfile.in  MacOSXBundleInfo.plist.in  bin2cpp.icon.128x128.icns  bin2cpp.icon.256x256.icns  demo_sample.cpp  html5skeleton.bat  html5skeleton.html  icon.xcf  icon_v2.xcf  splashcreen.xcf  splashscreen.xcf
msvc/: bin2cpp.sln  bin2cpp.vcproj  bin2cpp.vcxproj  bin2cpp.vcxproj.filters  bin2cpp_unittest.vcproj  bin2cpp_unittest.vcxproj  bin2cpp_unittest.vcxproj.filters  common.vcxproj  common.vcxproj.filters  generate_test_files.bat  install.vcxproj  install.vcxproj.filters  prebuild.bat  testfilegenerator.vcxproj  testfilegenerator.vcxproj.filters
nsis/: Win32.nsh  build_portable.bat  build_setup.bat  main.nsi
sample/: html5skeleton.bat
samples/: CMakeLists.txt  demo_sample.cpp  html5skeleton.bat
samples/demo_helloworld/: CMakeLists.txt  demo_helloworld.cpp  helloworld.bat  helloworld.cpp
samples/demo_icons/: CMakeLists.txt  demo_icons.bat  demo_icons.cpp
samples/demo_relative_dir/: CMakeLists.txt  demo_relative_dir.bat
samples/demo_relative_dir/include/libcalc/: calc.h
samples/demo_relative_dir/include/libtrigo/: sincos.h
samples/demo_relative_dir/src/: calc.cpp  generate_sinus_table.cpp  main.cpp  sincos.cpp
samples/demo_website/: CMakeLists.txt  demo_website.bat  demo_website.cpp
samples/demo_website/www/: index.html  index.html.old
samples/demo_website/www/blog/: index.html
samples/demo_website/www/blog/how-to-create-a-web-site/: index.html
samples/demo_website/www/blog/using-bin2cpp/: index.html
samples/demo_website/www/contact/: index.html
samples/demo_website/www/home/: index.html
samples/demo_website/www/static/: dark-mode.css  light-mode.css
src/: ArrayGenerator.cpp  ArrayGenerator.h  BaseGenerator.cpp  BaseGenerator.h  CMakeLists.txt  IGenerator.h  SegmentGenerator.cpp  SegmentGenerator.h  StringGenerator.cpp  StringGenerator.h  Win32ResourceGenerator.h  argumentparser.cpp  argumentparser.h  bin2cpp.cpp  bin2cpp.h  common.cpp  common.h  cppencoder.cpp  cppencoder.h  envfunc.cpp  environmentfunc.cpp  errorcodes.cpp  errorcodes.h  filesystemfunc.cpp  filesystemfunc.h  logger.cpp  logger.h  main.cpp  md5.cpp  md5.h  md5Ex.cpp  md5Ex.h  md5support.cpp  md5support.h  stringfunc.cpp
src/bin2cpp/: ArrayGenerator.cpp  ArrayGenerator.h  BaseGenerator.cpp  BaseGenerator.h  CMakeLists.txt  Context.cpp  Context.h  IGenerator.h  INameProvider.h  ITemplateVariableHandler.h  ITemplateVariableLookup.h  LegacyNameProvider.cpp  LegacyNameProvider.h  ManagerGenerator.cpp  ManagerGenerator.h  SegmentGenerator.cpp  SegmentGenerator.h  StringGenerator.cpp  StringGenerator.h  TemplateProcessor.cpp  TemplateProcessor.h  Win32ResourceGenerator.cpp  Win32ResourceGenerator.h  bin2cpp.samples.txt  common.cpp  common.h  config.h.in  crc32.cpp  crc32.h  enums.h  main.cpp  types.h  version.h.in  wildcard.cpp  wildcard.h
src/bin2cpp_unittest/: CMakeLists.txt  TestCommon.h  TestEnvironmentFunc.cpp  TestEnvironmentFunc.h  TestExtraction.cpp  TestExtraction.h  TestFilesystemFunc.cpp  TestFilesystemFunc.h  TestNativeFunc.cpp  TestNativeFunc.h  TestStringFunc.cpp  TestStringFunc.h  application.h  gtesthelper.h
src/common/: CMakeLists.txt  argumentparser.h  common.cpp  cppencoder.h  environmentfunc.cpp  environmentfunc.h  filesystemfunc.cpp  filesystemfunc.h  logger.h  nativefunc.cpp  nativefunc.h  stringfunc.cpp  stringfunc.h
src/testfilegenerator/: CMakeLists.txt  testfilegenerator.cpp
test/: TestCLI.cpp  TestCommon.cpp  TestExtraction.cpp  application.cpp  gtesthelper.cpp  gtesthelper.h  main.cpp  testfilegenerator.cpp  testfilegenerator.samples.txt
test/bin2cpp_unittest/: CMakeLists.txt  TestCLI.cpp  TestCLI.h  TestCommon.cpp  TestCommon.h  TestExtraction.cpp  TestExtraction.h  TestTemplateProcessor.cpp  TestTemplateProcessor.h  TestWildcard.cpp  TestWildcard.h  application.cpp  application.h  generate_test_files.bat  generate_test_files.bat.in  generate_test_files.cmake  generate_test_files.sh.in  main.cpp  prebuild.cmake
test/testfilegenerator/: CMakeLists.txt  testfilegenerator.cpp
